Event aggregate query: skip Time Field if ownership is requested